What's New for PSPRadio
========================
1.18.xxxx (2007-03-26)
NEW FEATURES
BUG FIXES
(raf) Core: PSPRadio would crash on startup if the visualizer plugin was disabled.
(raf) Core: PSPRadio would crash on startup if the SHOUTcast database (newdb.xml) file was empty.
KNOWN BUGS
(raf) Core: Static IP connections don't work correctly. Seems the gateway is not used as it should.  (Also, make sure CPU speed is 222 when establishing a WiFi connection).
(raf) Core: Module unloading doesn't free up all memory correctly. Even though plugins can now be loaded/unloaded, the PSP can eventually crash as it runs out of memory (after loading/unloading enough times; even though I switched back and forth between the text and 3d UIs over 20 times, and everything worked fine).


1.18.1365 (2007-03-26)
NEW FEATURES
(raf) TextUI: After a configurable amount (default 10 seconds) during playback, the visualizer goes into fullscreen.
(raf) Core: Use PSPRadio.cfg PLUGINS:VISUALIZER_FULLSCREEN_WAIT to set the wait before going into visualizer fullscreen mode. (Set to 0 to disable).
(raf) Core: This fullscreen config wait parameter is now configurable from the PLUGINS Options menu.
(raf) Core: Added kiss-fft routines, and now provide frequency data to visualizer plugins if requested.
(raf) Plugins: Added a spectrum analyzer plugin (based on finespectrum.c for XMMS).
(raf) Core: FFT and VIS_Spectrum use vfpu for some calculations, to get a speedup. (Thanks to MrMr[iCE] for his helpful vfpu library pspmath).
(raf) Core: Removed VBLANK message across the core and sent to UI. UIs need to do it themselves.
(raf) TextUI3d: Updated to use a renderthread instead of vblank message -- Good speed-up.
(raf) Core/Plugins: UI Plugins have versioning now, and won't work across versions of PSPRadio that don't support the same interface.
(raf) Core: Clean-up.