@@ -2,9 +2,11 @@ What's New for PSPRadio
 ========================
 1.18.xxxx (2007-03-26)
 NEW FEATURES
+(raf) TextUI: Msgbox now goes away after 5sec (not based on frames rendered anymore, but time).
 BUG FIXES
 (raf) Core: PSPRadio would crash on startup if the visualizer plugin was disabled.
 (raf) Core: PSPRadio would crash on startup if the SHOUTcast database (newdb.xml) file was empty.
+(raf) TextUI: Corrected problem where PSPRadio would crash when downloading the SHOUTcast database. (The problem was caused by lack of complete support for values -1 and -2 in the configuration files after the TextUI rendering changes.
 KNOWN BUGS
 (raf) Core: Static IP connections don't work correctly. Seems the gateway is not used as it should.  (Also, make sure CPU speed is 222 when establishing a WiFi connection).
 (raf) Core: Module unloading doesn't free up all memory correctly. Even though plugins can now be loaded/unloaded, the PSP can eventually crash as it runs out of memory (after loading/unloading enough times; even though I switched back and forth between the text and 3d UIs over 20 times, and everything worked fine).
